samples/_failures_safe/1761433942_9989ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a115f17d.c: In function ‘main’:
./samples/SAFE/__tmp_a115f17d.c:173:5: error: expected expression at end of input
  173 |     if (fgets(input, sizeof(input), stdin) == NULL)
      |     ^~
./samples/SAFE/__tmp_a115f17d.c:173:5: error: expected declaration or statement at end of input
